--- a/src/ejs/_common/js.ejs
+++ b/src/ejs/_common/js.ejs
@@ -25,7 +25,7 @@ usemin内のsrcはEJSファイルからのパスを指定
 <!-- build:js1 assets/js/scripts.min.js -->
 <script type="text/javascript" src="../assets/js-dev/utils/CommonUtils.js"></script>
 <script type="text/javascript" src="../assets/js-dev/utils/Methods.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/H.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/Head.js"></script>
 <script type="text/javascript" src="../assets/js-dev/page/All.js"></script>
 <script type="text/javascript" src="../assets/js-dev/page/Top.js"></script>
 <script type="text/javascript" src="../assets/js-dev/page/Second.js"></script>
