--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -2,15 +2,15 @@
 <html lang="ja">
 <head>
 <title><%= global.sitename %></title>
-<%= include _common/meta %>
-<%= include _common/js %>
+<%= include ('_common/meta') %>
+<%= include ('_common/js') %>
 </head>
 <body>
 
 <!-- wrap -->
 <div id="wrap">
 
-<%= include _common/header %>
+<%= include ('_common/header') %>
 
 <!-- contents -->
 <article class="contents" id="top">
@@ -20,7 +20,7 @@
 </article>
 <!-- //contents -->
 
-<%= include _common/footer %>
+<%= include ('_common/footer') %>
 
 </div>
 <!-- //wrap -->
