--- a/src/ejs/_common/js.ejs
+++ b/src/ejs/_common/js.ejs
@@ -1,3 +1,6 @@
+<% if( page.type == 'top' ){ %>
+<%# Top %>
+
 <link rel="stylesheet" href="assets/css/styles.min.css" media="all">
 <!-- build:remove -->
 usemin内のsrcはEJSファイルからのパスを指定
@@ -31,3 +34,15 @@ usemin内のsrcはEJSファイルからのパスを指定
 <script type="text/javascript" src="../assets/js-dev/page/Second.js"></script>
 <script type="text/javascript" src="../assets/js-dev/page/Init.js"></script>
 <!-- endbuild -->
+
+<% } else{ %>
+<%# Second %>
+
+<link rel="stylesheet" href="<%= global.root %>assets/css/styles.min.css" media="all">
+<script src="<%= global.root %>assets/js/utils.min.js"></script>
+<script src="<%= global.root %>assets/js/libs.min.js"></script>
+<script src="<%= global.root %>assets/js/scripts.min.js"></script>
+
+<% } %>
+
+
