--- a/src/ejs/_common/js.ejs
+++ b/src/ejs/_common/js.ejs
@@ -6,10 +6,10 @@
 usemin内のsrcはEJSファイルからのパスを指定
 <!-- endbuild -->
 <!-- build:js1 assets/js/utils.min.js -->
-<script type="text/javascript" src="../assets/js-dev/Global.js"></script>
-<script type="text/javascript" src="../assets/js-dev/utils/Utils.js"></script>
-<script type="text/javascript" src="../assets/js-dev/utils/Facebook.js"></script>
-<script type="text/javascript" src="../assets/js-dev/utils/GoogleAnalytics.js"></script>
+<script type="text/javascript" src="../assets/js-dev/global.edit.js"></script>
+<script type="text/javascript" src="../assets/js-dev/utils/utils.js"></script>
+<script type="text/javascript" src="../assets/js-dev/utils/facebook.js"></script>
+<script type="text/javascript" src="../assets/js-dev/utils/googleAnalytics.js"></script>
 <!-- endbuild -->
 <!-- build:js assets/js/libs.min.js -->
 <script type="text/javascript" src="../assets/js-libs/jquery.js"></script>
@@ -26,13 +26,13 @@ usemin内のsrcはEJSファイルからのパスを指定
 <script type="text/javascript" src="../assets/js-libs/owl.carousel.js"></script>
 <!-- endbuild -->
 <!-- build:js1 assets/js/scripts.min.js -->
-<script type="text/javascript" src="../assets/js-dev/utils/CommonUtils.js"></script>
-<script type="text/javascript" src="../assets/js-dev/utils/Methods.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/Head.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/All.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/Top.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/Second.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/Init.js"></script>
+<script type="text/javascript" src="../assets/js-dev/utils/commonUtils.js"></script>
+<script type="text/javascript" src="../assets/js-dev/utils/methods.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/head.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/all.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/top.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/second.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/init.js"></script>
 <!-- endbuild -->
 
 <% } else{ %>
