--- a/src/assets/sass/component/_responsive.scss
+++ b/src/assets/sass/component/_responsive.scss
@@ -18,7 +18,28 @@
 /*------------------------------------------------
    layout
 ------------------------------------------------*/
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1200px) {
+// end
+}
+
+/*------------------------------------------------
+   layout
+------------------------------------------------*/
+@media screen and (max-width: 1200px), screen and (max-width: 941px) {
+// end
+}
+
+/*------------------------------------------------
+   layout
+------------------------------------------------*/
+@media screen and (max-width: 940px), screen and (max-width: 668px) {
+// end
+}
+
+/*------------------------------------------------
+   layout
+------------------------------------------------*/
+@media screen and (max-width: 667px) {
 
 .pc{
   display: none;
