--- a/src/ejs/_common/js.ejs
+++ b/src/ejs/_common/js.ejs
@@ -24,15 +24,20 @@ usemin内のsrcはEJSファイルからのパスを指定
 <script type="text/javascript" src="../assets/js-libs/imagesloaded.js"></script>
 <script type="text/javascript" src="../assets/js-libs/masonry.pkgd.js"></script>
 <script type="text/javascript" src="../assets/js-libs/owl.carousel.js"></script>
+<script type="text/javascript" src="../assets/js-libs/dat.gui.js"></script>
+<script type="text/javascript" src="../assets/js-libs/stats.min.js"></script>
+<script type="text/javascript" src="../assets/js-libs/bufferLoader.js"></script>
 <!-- endbuild -->
 <!-- build:js1 assets/js/scripts.min.js -->
 <script type="text/javascript" src="../assets/js-dev/utils/commonUtils.js"></script>
 <script type="text/javascript" src="../assets/js-dev/utils/methods.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/head.js"></script>
 <script type="text/javascript" src="../assets/js-dev/page/all.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/top.js"></script>
-<script type="text/javascript" src="../assets/js-dev/page/second.js"></script>
 <script type="text/javascript" src="../assets/js-dev/page/init.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/main.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/main.imagesLoaded.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/main.sound.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/main.api.js"></script>
+<script type="text/javascript" src="../assets/js-dev/page/main.utils.js"></script>
 <!-- endbuild -->
 
 <% } else{ %>
