--- a/src/assets/sass/component/_mixin.scss
+++ b/src/assets/sass/component/_mixin.scss
@@ -1,411 +1,5 @@
 @charset "utf-8";
 
-
-/* --------------------------------------------- */
-/* value */
-/* --------------------------------------------- */
-$width_s: 667px;
-$width_m: 960px;
-$width_ml: 1024px;
-$width_l: 1200px;
-
-/* --------------------------------------------- */
-/* ease */
-/* --------------------------------------------- */
-$easeIn-out-cubic: 0.645, 0.045, 0.355, 1.000;
-$easeIn-out-circ: 0.785, 0.135, 0.150, 0.860;
-$easeIn-out-expo: 1.000, 0.000, 0.000, 1.000;
-$easeIn-out-back: 0.680, -0.550, 0.265, 1.550;
-
-/* --------------------------------------------- */
-/* color */
-/* --------------------------------------------- */
-$black: #000;
-$dk_black: #1f1f1f;
-$lt_black: #2f2f2f;
-
-$vdk_gray: #3f3f3f;
-$dk_gray: #666;
-$gray: #999;
-$lt_gray: #aaa;
-$vlt_gray: #ccc;
-
-$dk_white: #ddd;
-$lt_white: #eee;
-$white: #fff;
-
-/* --------------------------------------------- */
-/* font */
-/* --------------------------------------------- */
-$font_sans_jp: 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
-// $font_sans_jp: 'Noto Sans Japanese', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
-$font_sans_en: Arial, 'Helvetica Neue', sans-serif;
-$font_serif_jp: 'ヒラギノ明朝 ProN W3', 'HiraMinProN-W3', 'HG明朝E', 'ＭＳ Ｐ明朝', 'MS PMincho', 'MS 明朝', serif;
-$font_serif_en: 'Times New Roman', sans-serif;
-$font_roboto: 'Rotobo', sans-serif;
-$font_roboto_cond: 'Roboto Condensed', sans-serif;
-
-@mixin font-roboto-300{
-  font-family: $font_roboto;
-  font-weight: 300;
-  font-style: normal;
-}
-@mixin font-roboto-400{
-  font-family: $font_roboto;
-  font-weight: 400;
-  font-style: normal;
-}
-@mixin font-roboto-500{
-  font-family: $font_roboto;
-  font-weight: 500;
-  font-style: normal;
-}
-@mixin font-roboto-700{
-  font-family: $font_roboto;
-  font-weight: 700;
-  font-style: normal;
-}
-@mixin font-roboto-cond-300{
-  font-family: $font_roboto_cond;
-  font-weight: 300;
-  font-style: normal;
-}
-@mixin font-roboto-cond-400{
-  font-family: $font_roboto_cond;
-  font-weight: 400;
-  font-style: normal;
-}
-@mixin font-roboto-cond-700{
-  font-family: $font_roboto_cond;
-  font-weight: 700;
-  font-style: normal;
-}
-
-
-/* --------------------------------------------- */
-/* width */
-/* --------------------------------------------- */
-@mixin set-flex-width( $w: 640 ){
-  width: $w+px;
-  @media screen and (max-width: #{$w}px) {
-    width: 100%;
-    padding: 0 20px;
-    box-sizing: border-box;
-  }
-}
-
-/* --------------------------------------------- */
-/* container */
-/* --------------------------------------------- */
-@mixin cf {
-  content: "";
-  display: block;
-  clear: both;
-  &:after{
-    content: "";
-    display: block;
-    clear: both;
-  }
-}
-
-@mixin title-style{
-  position: relative;
-  margin: 0 0 15px 0;
-  padding: 0 0 8px 0;
-  font-weight: bold;
-  border-bottom: $lt_black solid 1px;
-  &:after{
-    content: "";
-    display: block;
-    position: absolute;
-    width: 15%;
-    bottom: -1px;
-    border-bottom: $dk_gray solid 1px;
-  }
-}
-
-@mixin corner-arrow( $r: 5, $b: 5, $w: 6, $h: 6 ){
-  &:before{
-    content: "";
-    position: absolute;
-    right: $r + px;
-    bottom: $b + px;
-    @include background-image('/icons/all_arw05.png', $w, $h, 0 );
-  }
-}
-
-@mixin hide-text {
-  text-indent:100%;
-  white-space:nowrap;
-  overflow:hidden;
-}
-
-@mixin op-over( $op: 0.5, $time: 0.15 ){
-  transition: all #{$time}s cubic-bezier($easeIn-out-circ);
-  &:hover{
-    opacity: $op;
-  }
-}
-
-@mixin shadow-button{
-  box-shadow: 5px 5px 0 rgba( 0, 0, 0, 0.08 );
-  transition: all 0.25s cubic-bezier($easeIn-out-circ);
-
-  &:hover{
-    box-shadow: 10px 10px 0 rgba( 0, 0, 0, 0.08 );
-    transform: translate3d( -5px, -5px, 0px );
-  }
-}
-
-@function addSuffix( $file, $suffix: '@2x' ){
-  $len: str-length( $file );
-  $pos: str-index($file, '.');
-  $first: str-slice($file, 0, $pos - 1);
-  $lastLen: $len - str-length( $first );
-  $last: str-slice( $file, $pos, $len );
-  $filename: $first + $suffix + $last;
-  @return $filename;
-}
-
-@mixin background-image( $file, $w, $h, $position: 0){
-  $path: '../img' + $file;
-
-  // center
-  @if $position == 1{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: (-$h/2+px) 0 0 (-$w/2+px);
-  }
-  @else if $position == 2{
-    position: absolute;
-    left: 0;
-    top: 50%;
-    margin: (-$h/2+px) 0 0 0;
-  }
-
-  @if $w != auto {
-    $w: $w+px;
-  }
-
-  @if $h != auto {
-    $h: $h+px
-  }
-
-  content: "";
-  display: block;
-  width: $w;
-  height: $h;
-  background-image: url( #{$path} );
-  background-repeat: no-repeat;
-  background-size: $w $h;
-  @include hide-text;
-}
-
-
-/* --------------------------------------------- */
-/* multi device background */
-/* --------------------------------------------- */
-@mixin custom-background( $file, $w, $h ){
-  /* @2x */
-
-  $file_suffix: addSuffix( $file, '' );
-  $path_1x: '/assets/img/medium' + $file;
-  $path_2x: '/assets/img/large' + $file_suffix;
-
-  display: block;
-  width: $w+px;
-  height: $h+px;
-  background-image: url( #{$path_1x} );
-  background-repeat: no-repeat;
-  background-size: $w+px $h+px;
-  @include hide-text;
-
-  @media (min--moz-device-pixel-ratio: 1.3),
-  (-o-min-device-pixel-ratio: 2.6/2),
-  (-webkit-min-device-pixel-ratio: 1.3),
-  (min-device-pixel-ratio: 1.3),
-  (min-resolution: 1.3dppx) {
-    background-image: url( #{$path_2x} );
-    background-size: $w+px $h+px;
-  }
-}
-
-@mixin hover-background( $file, $w, $h ){
-  $file_on: addSuffix( $file, '_on' );
-  position: relative;
-  @include custom-background( $file, $w, $h );
-
-  &:hover:after{
-    opacity: 1;
-  }
-
-  &:after{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    @include custom-background( $file_on, $w, $h );
-    opacity: 0;
-    transition: opacity .2s cubic-bezier($easeIn-out-circ);
-  }
-}
-
-
-/* --------------------------------------------- */
-/* mixin */
-/* --------------------------------------------- */
-@mixin trim-image-cont($w, $h){
-  position: relative;
-  width: $w+px;
-  height: $h+px;
-  overflow: hidden;
-  border-radius: 50%;
-
-  img{
-    position: absolute;
-    left: -100%;
-    right: -100%;
-    margin: auto;
-
-    &.x{
-      width: auto;
-      height: 100%;
-    }
-
-    &.y{
-      width: 100%;
-      height: auto;
-    }
-  }
-}
-
-
-/* --------------------------------------------- */
-/* button */
-/* --------------------------------------------- */
-@mixin white-button( $w: auto, $h: auto, $padding: auto ){
-  position: relative;
-  display: block;
-  width: $w;
-  height: $h;
-  padding: $padding;
-  text-align: center;
-  text-shadow: 0 -1px 0 $white;
-  color: $lt_black;
-  line-height: 1.3;
-  background: linear-gradient( to bottom, $lt_white 0%, $white 50%);
-  border: $white solid 1px;
-  border-radius: 3px;
-  box-sizing: border-box;
-  @include corner-arrow( 6, 6, 6, 6 );
-  @include op-over( 0.8, 0.15 );
-}
-
-@mixin black-button( $w: auto, $h: auto, $padding: auto ){
-  position: relative;
-  display: block;
-  width: $w;
-  height: $h;
-  padding: $padding;
-  text-align: center;
-  text-shadow: 0 1px 0 $dk_black;
-  color: $white;
-  line-height: 1.3;
-  background: linear-gradient( to bottom, $lt_black 0%, $dk_black 100%);
-  border: $lt_black solid 1px;
-  border-radius: 3px;
-  box-sizing: border-box;
-  @include corner-arrow( 6, 6, 6, 6 );
-  @include op-over( 0.5, 0.15 );
-}
-
-/* --------------------------------------------- */
-/* link and button */
-/* --------------------------------------------- */
-@mixin text-link{
-  color: #92b006;
-  text-decoration: underline;
-  &:hover{
-    text-decoration: none;
-    color: $yellow;
-  }
-  transition: color 150ms ease;
-}
-
-@mixin text-btn-link{
-  &:hover{
-    color: $yellow;
-  }
-  transition: color 150ms ease;
-}
-
-@mixin op-hover{
-  &:hover{
-    opacity: 0.7;
-  }
-  transition: opacity 150ms ease;
-}
-
-@mixin img-hover( $path ){
-  background: url(../img/global/large/#{$path}) no-repeat;  background-size: 0;
-  img{
-    transition: all 150ms ease;
-  }
-  &:hover{
-    background-size: 100% auto;
-    img{
-      opacity: 0;
-      transform: scale(1.1);
-    }
-  }
-}
-
-/* --------------------------------------------- */
-/* animation */
-/* --------------------------------------------- */
-@mixin contentsHide( $time: 700 ){
-  display: none;
-  opacity: 0;
-  animation-duration: #{$time}ms;
-  animation-name: contents-fadeout;
-  // transition: opacity #{$time}s cubic-bezier($easeIn-out-circ);
-}
-
-@mixin contentsShow( $time: 700 ){
-  display: block;
-  opacity: 1;
-  animation-duration: #{$time}ms;
-  animation-name: contents-fadein;
-  // transition: opacity #{$time}s cubic-bezier($easeIn-out-circ);
-}
-
-@keyframes fadein {
-  0% {
-    display: none;
-    opacity: 0;
-  }
-  1% {
-    display: block;
-    opacity: 0;
-  }
-  100% {
-    display: block;
-    opacity: 1;
-  }
-}
-
-@keyframes fadeout {
-  0% {
-    display: block;
-    opacity: 1;
-  }
-  99% {
-    display: block;
-    opacity: 0;
-  }
-  100% {
-    display: none;
-    opacity: 0;
-  }
-}
+@import "_mixin_common.scss";
+@import "_mixin_background.scss";
+@import "_mixin_button.scss";
