--- a/src/ejs/second/index.ejs
+++ b/src/ejs/second/index.ejs
@@ -9,7 +9,7 @@ page = {
 <title><%= global.sitename %></title>
 <%- include ../_common/include %>
 <%- include ../_common/meta %>
-<%- include ../_common/js %>
+<%- include ../_common/css %>
 </head>
 <body>
 
@@ -31,5 +31,6 @@ page = {
 </div>
 <!-- //wrap -->
 
+<%- include ../_common/js %>
 </body>
 </html>
