--- a/src/assets/sass/component/_common.scss
+++ b/src/assets/sass/component/_common.scss
@@ -1,7 +1,9 @@
 @charset "utf-8";
+
 /* --------------------------------------------- */
 /* common style */
 /* --------------------------------------------- */
+
 html {
   width: 100%;
   height: 100%;
@@ -20,7 +22,11 @@ body {
   background: $white;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-weight: normal;
   font-style: normal;
 }
@@ -52,18 +58,23 @@ a:active {
   color: $gray;
 }
 
+* {
+  -webkit-text-size-adjust: none;
+}
+
+
 /* --------------------------------------------- */
 /* wrap */
 /* --------------------------------------------- */
+
 #wrap {
   position: relative;
 }
 
-body#smp{
-}
+body#smp {}
 
-body#pc{
-}
+body#pc {}
+
 
 /* --------------------------------------------- */
 /* layout */
@@ -73,6 +84,7 @@ body#pc{
 /* --------------------------------------------- */
 /* loading */
 /* --------------------------------------------- */
+
 .loadCircleAnima {
   position: absolute;
   left: 50%;
@@ -97,10 +109,7 @@ body#pc{
   0% {
     transform: rotateZ(-360deg);
   }
-
   80% {
     transform: rotateZ(0deg);
   }
-
 }
-
