--- a/src/ejs/_common/css.ejs
+++ b/src/ejs/_common/css.ejs
@@ -5,5 +5,5 @@
 <%# Second %>
 <link rel="stylesheet" href="<%= global.root %>assets/css/styles.min.css" media="all">
 <% } %>
-
+<link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Condensed:300,400,700' rel='stylesheet' type='text/css'>
 
