--- a/src/ejs/_common/meta.ejs
+++ b/src/ejs/_common/meta.ejs
@@ -5,13 +5,12 @@
 <meta name="viewport" content="width=device-width" />
 <meta name="format-detection" content="telephone=no">
 <link rel="start" href="<%= global.root %>" title="Home">
-<link rel="shortcut icon" href="<%= global.root %>assets/img/favicon.ico">
+<link rel="shortcut icon" href="<%= global.root %>assets/img/common/favicon.ico">
 
 <meta property="og:title" content="">
 <meta property="og:type" content="website">
 <meta property="og:url" content="<%= global.root %>">
-<meta property="og:image" content="<%= global.root %>assets/img/share.jpg">
+<meta property="og:image" content="<%= global.root %>assets/img/common/share.jpg">
 <meta property="og:site_name" content="">
 <meta property="og:description" content="">
 
-<link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Condensed:300,400,700' rel='stylesheet' type='text/css'>
