--- a/src/assets/sass/component/_mixin_common.scss
+++ b/src/assets/sass/component/_mixin_common.scss
@@ -37,9 +37,9 @@ $white: #fff;
 /* --------------------------------------------- */
 /* font */
 /* --------------------------------------------- */
-$font_sans_jp: 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
+$font_sans_jp: 'YakuHanJP', YuGothic, '游ゴシック', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'Meiryo UI', Meiryo, 'メイリオ', 'ＭＳ Ｐゴシック', sans-serif;
 // $font_sans_jp: 'Noto Sans Japanese', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
-$font_sans_en: Arial, 'Helvetica Neue', sans-serif;
+$font_sans_en: 'Helvetica Neue', Arial, sans-serif;
 $font_serif_jp: 'ヒラギノ明朝 ProN W3', 'HiraMinProN-W3', 'HG明朝E', 'ＭＳ Ｐ明朝', 'MS PMincho', 'MS 明朝', serif;
 $font_serif_en: 'Times New Roman', sans-serif;
 $font_roboto: 'Rotobo', sans-serif;
