--- a/src/ejs/_common/js.ejs
+++ b/src/ejs/_common/js.ejs
@@ -14,6 +14,7 @@ usemin内のsrcはEJSファイルからのパスを指定
 <script type="text/javascript" src="../assets/js-libs/jquery.transit.js"></script>
 <script type="text/javascript" src="../assets/js-libs/jquery.smooth-scroll.js"></script>
 <script type="text/javascript" src="../assets/js-libs/jquery.easing.js"></script>
+<script type="text/javascript" src="../assets/js-libs/autolink-min.js"></script>
 <script type="text/javascript" src="../assets/js-libs/html5shiv.js"></script>
 <script type="text/javascript" src="../assets/js-libs/modernizr.js"></script>
 <script type="text/javascript" src="../assets/js-libs/eventie.js"></script>
