--- a/src/ejs/_common/meta.ejs
+++ b/src/ejs/_common/meta.ejs
@@ -7,10 +7,15 @@
 <link rel="start" href="<%= global.root %>" title="Home">
 <link rel="shortcut icon" href="<%= global.root %>assets/img/common/favicon.ico">
 
-<meta property="og:title" content="">
+<meta property="og:title" content="<%= global.sitename %>">
 <meta property="og:type" content="website">
 <meta property="og:url" content="<%= global.root %>">
 <meta property="og:image" content="<%= global.root %>assets/img/common/share.jpg">
-<meta property="og:site_name" content="">
-<meta property="og:description" content="">
+<meta property="og:site_name" content="<%= global.sitename %>">
+<meta property="og:description" content="<%= global.description %>">
 
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="<%= global.sitename %>">
+<meta name="twitter:description" content="<%= global.description %>">
+<meta name="twitter:site" content="">
+<meta name="twitter:image" content="<%= global.root %>assets/img/common/share.jpg">
