--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -2,6 +2,8 @@
 
 // @import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 
+@import "./component/_fonts_yakuhanjp.scss";
+
 // @import "./component/_sprite.scss";
 @import "./component/_mixin.scss";
 @import "./component/_reset.scss";
