--- a/src/assets/sass/component/fonts/black-tie/_variables.scss
+++ b/src/assets/sass/component/fonts/black-tie/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 // --------------------------
 
-$bt-font-path:        "../fonts" !default;
+$bt-font-path:        "../fonts/black-tie" !default;
 $bt-font-size-base:   14px !default;
 $bt-css-prefix:       bt !default;
 $brands-css-prefix:   fab !default;
