--- a/src/assets/sass/component/fonts/_yakuhanjp.scss
+++ b/src/assets/sass/component/fonts/_yakuhanjp.scss
@@ -8,59 +8,61 @@
 *
 =================================================== */
 
+$yakuhan-path: '../fonts/yakuhan/';
+
 @font-face {
   font-family: 'YakuHanJP';
   font-style: normal;
   font-weight: 100;
-  src: url(../fonts/YakuHanJP-Thin.woff2) format('woff2'),
-  url(../fonts/YakuHanJP-Thin.woff) format('woff'),
-  url(../fonts/YakuHanJP-Thin.eot);
+  src: url('#{$yakuhan-path}YakuHanJP-Thin.woff2') format('woff2'),
+  url('#{$yakuhan-path}YakuHanJP-Thin.woff') format('woff'),
+  url('#{$yakuhan-path}YakuHanJP-Thin.eot');
 }
 @font-face {
   font-family: 'YakuHanJP';
   font-style: normal;
   font-weight: 200;
-  src: url(../fonts/YakuHanJP-Light.woff2) format('woff2'),
-  url(../fonts/YakuHanJP-Light.woff) format('woff'),
-  url(../fonts/YakuHanJP-Light.eot);
+  src: url('#{$yakuhan-path}YakuHanJP-Light.woff2') format('woff2'),
+  url('#{$yakuhan-path}YakuHanJP-Light.woff') format('woff'),
+  url('#{$yakuhan-path}YakuHanJP-Light.eot');
 }
 @font-face {
   font-family: 'YakuHanJP';
   font-style: normal;
   font-weight: 300;
-  src: url(../fonts/YakuHanJP-DemiLight.woff2) format('woff2'),
-  url(../fonts/YakuHanJP-DemiLight.woff) format('woff'),
-  url(../fonts/YakuHanJP-DemiLight.eot);
+  src: url('#{$yakuhan-path}YakuHanJP-DemiLight.woff2') format('woff2'),
+  url('#{$yakuhan-path}YakuHanJP-DemiLight.woff') format('woff'),
+  url('#{$yakuhan-path}YakuHanJP-DemiLight.eot');
 }
 @font-face {
   font-family: 'YakuHanJP';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/YakuHanJP-Regular.woff2) format('woff2'),
-  url(../fonts/YakuHanJP-Regular.woff) format('woff'),
-  url(../fonts/YakuHanJP-Regular.eot);
+  src: url('#{$yakuhan-path}YakuHanJP-Regular.woff2') format('woff2'),
+  url('#{$yakuhan-path}YakuHanJP-Regular.woff') format('woff'),
+  url('#{$yakuhan-path}YakuHanJP-Regular.eot');
 }
 @font-face {
   font-family: 'YakuHanJP';
   font-style: normal;
   font-weight: 500;
-  src: url(../fonts/YakuHanJP-Medium.woff2) format('woff2'),
-  url(../fonts/YakuHanJP-Medium.woff) format('woff'),
-  url(../fonts/YakuHanJP-Medium.eot);
+  src: url('#{$yakuhan-path}YakuHanJP-Medium.woff2') format('woff2'),
+  url('#{$yakuhan-path}YakuHanJP-Medium.woff') format('woff'),
+  url('#{$yakuhan-path}YakuHanJP-Medium.eot');
 }
 @font-face {
   font-family: 'YakuHanJP';
   font-style: normal;
   font-weight: 700;
-  src: url(../fonts/YakuHanJP-Bold.woff2) format('woff2'),
-  url(../fonts/YakuHanJP-Bold.woff) format('woff'),
-  url(../fonts/YakuHanJP-Bold.eot);
+  src: url('#{$yakuhan-path}YakuHanJP-Bold.woff2') format('woff2'),
+  url('#{$yakuhan-path}YakuHanJP-Bold.woff') format('woff'),
+  url('#{$yakuhan-path}YakuHanJP-Bold.eot');
 }
 @font-face {
   font-family: 'YakuHanJP';
   font-style: normal;
   font-weight: 900;
-  src: url(../fonts/YakuHanJP-Black.woff2) format('woff2'),
-  url(../fonts/YakuHanJP-Black.woff) format('woff'),
-  url(../fonts/YakuHanJP-Black.eot);
+  src: url('#{$yakuhan-path}YakuHanJP-Black.woff2') format('woff2'),
+  url('#{$yakuhan-path}YakuHanJP-Black.woff') format('woff'),
+  url('#{$yakuhan-path}YakuHanJP-Black.eot');
 }
