--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -2,8 +2,15 @@
 
 // @import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 
+// chartsheets
+// fontawesome: http://fontawesome.io/cheatsheet/
+// blacktie: ?
+// simple-line-icon: http://simplelineicons.com/
+// ionicons: http://ionicons.com/cheatsheet.html
+
 @import "./component/fonts/_font-awesome.scss";
 @import "./component/fonts/_simple-line-icons.scss";
+@import "./component/fonts/_ionicons.scss";
 @import "./component/fonts/_black-tie.scss";
 @import "./component/fonts/_yakuhanjp.scss";
 
