Add web font sample

--- a/src/assets/sass/component/_mixin-common.scss
+++ b/src/assets/sass/component/_mixin-common.scss
@@ -82,6 +82,32 @@ $font_roboto_cond: 'Roboto Condensed', sans-serif;
 }
 
 /* --------------------------------------------- */
+/* font icon */
+/* --------------------------------------------- */
+// @mixin sample-font-awesome(){
+//   @include fa-icon();
+//   content: $fa-var-adjust;
+// }
+
+// @mixin sample-black-tie(){
+//   @include bt-icon();
+//   content: $bt-var-phone;
+//   font-weight: 900; // solid
+//   font-weight: 700; // bold
+//   font-weight: 200; // light
+// }
+
+// @mixin sample-ionicons(){
+//   @include ion-font();
+//   content: $ionicon-var-alert;
+// }
+
+// @mixin sample-simple-line-font(){
+//   @include simple-line-font();
+//   content: $slf-var-clock;
+// }
+
+/* --------------------------------------------- */
 /* function */
 /* --------------------------------------------- */
 @function addSuffix( $file, $suffix: '@2x' ){
