--- a/src/assets/sass/component/fonts/_simple-line-icons.scss
+++ b/src/assets/sass/component/fonts/_simple-line-icons.scss
@@ -18,6 +18,20 @@ $simple-line-icon-prefix: "icon-" !default;
   }
 }
 
+@mixin simple-line-font(){
+  font-family: '#{$simple-line-font-family}';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .#{$simple-line-icon-prefix} {
   &user,
   &people,
@@ -208,17 +222,7 @@ $simple-line-icon-prefix: "icon-" !default;
   &social-dropbox,
   &social-vkontakte,
   &social-steam {
-    font-family: '#{$simple-line-font-family}';
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    @include simple-line-font();
  }
 }
 
@@ -977,3 +981,193 @@ $simple-line-icon-prefix: "icon-" !default;
 .#{$simple-line-icon-prefix}social-steam:before {
   content: "\e620";
 }
+
+$slf-var-user: "\e005";
+$slf-var-people: "\e001";
+$slf-var-user-female: "\e000";
+$slf-var-user-follow: "\e002";
+$slf-var-user-following: "\e003";
+$slf-var-user-unfollow: "\e004";
+$slf-var-login: "\e066";
+$slf-var-logout: "\e065";
+$slf-var-emotsmile: "\e021";
+$slf-var-phone: "\e600";
+$slf-var-call-end: "\e048";
+$slf-var-call-in: "\e047";
+$slf-var-call-out: "\e046";
+$slf-var-map: "\e033";
+$slf-var-location-pin: "\e096";
+$slf-var-direction: "\e042";
+$slf-var-directions: "\e041";
+$slf-var-compass: "\e045";
+$slf-var-layers: "\e034";
+$slf-var-menu: "\e601";
+$slf-var-list: "\e067";
+$slf-var-options-vertical: "\e602";
+$slf-var-options: "\e603";
+$slf-var-arrow-down: "\e604";
+$slf-var-arrow-left: "\e605";
+$slf-var-arrow-right: "\e606";
+$slf-var-arrow-up: "\e607";
+$slf-var-arrow-up-circle: "\e078";
+$slf-var-arrow-left-circle: "\e07a";
+$slf-var-arrow-right-circle: "\e079";
+$slf-var-arrow-down-circle: "\e07b";
+$slf-var-check: "\e080";
+$slf-var-clock: "\e081";
+$slf-var-plus: "\e095";
+$slf-var-minus: "\e615";
+$slf-var-close: "\e082";
+$slf-var-event: "\e619";
+$slf-var-exclamation: "\e617";
+$slf-var-organization: "\e616";
+$slf-var-trophy: "\e006";
+$slf-var-screen-smartphone: "\e010";
+$slf-var-screen-desktop: "\e011";
+$slf-var-plane: "\e012";
+$slf-var-notebook: "\e013";
+$slf-var-mustache: "\e014";
+$slf-var-mouse: "\e015";
+$slf-var-magnet: "\e016";
+$slf-var-energy: "\e020";
+$slf-var-disc: "\e022";
+$slf-var-cursor: "\e06e";
+$slf-var-cursor-move: "\e023";
+$slf-var-crop: "\e024";
+$slf-var-chemistry: "\e026";
+$slf-var-speedometer: "\e007";
+$slf-var-shield: "\e00e";
+$slf-var-screen-tablet: "\e00f";
+$slf-var-magic-wand: "\e017";
+$slf-var-hourglass: "\e018";
+$slf-var-graduation: "\e019";
+$slf-var-ghost: "\e01a";
+$slf-var-game-controller: "\e01b";
+$slf-var-fire: "\e01c";
+$slf-var-eyeglass: "\e01d";
+$slf-var-envelope-open: "\e01e";
+$slf-var-envelope-letter: "\e01f";
+$slf-var-bell: "\e027";
+$slf-var-badge: "\e028";
+$slf-var-anchor: "\e029";
+$slf-var-wallet: "\e02a";
+$slf-var-vector: "\e02b";
+$slf-var-speech: "\e02c";
+$slf-var-puzzle: "\e02d";
+$slf-var-printer: "\e02e";
+$slf-var-present: "\e02f";
+$slf-var-playlist: "\e030";
+$slf-var-pin: "\e031";
+$slf-var-picture: "\e032";
+$slf-var-handbag: "\e035";
+$slf-var-globe-alt: "\e036";
+$slf-var-globe: "\e037";
+$slf-var-folder-alt: "\e039";
+$slf-var-folder: "\e089";
+$slf-var-film: "\e03a";
+$slf-var-feed: "\e03b";
+$slf-var-drop: "\e03e";
+$slf-var-drawer: "\e03f";
+$slf-var-docs: "\e040";
+$slf-var-doc: "\e085";
+$slf-var-diamond: "\e043";
+$slf-var-cup: "\e044";
+$slf-var-calculator: "\e049";
+$slf-var-bubbles: "\e04a";
+$slf-var-briefcase: "\e04b";
+$slf-var-book-open: "\e04c";
+$slf-var-basket-loaded: "\e04d";
+$slf-var-basket: "\e04e";
+$slf-var-bag: "\e04f";
+$slf-var-action-undo: "\e050";
+$slf-var-action-redo: "\e051";
+$slf-var-wrench: "\e052";
+$slf-var-umbrella: "\e053";
+$slf-var-trash: "\e054";
+$slf-var-tag: "\e055";
+$slf-var-support: "\e056";
+$slf-var-frame: "\e038";
+$slf-var-size-fullscreen: "\e057";
+$slf-var-size-actual: "\e058";
+$slf-var-shuffle: "\e059";
+$slf-var-share-alt: "\e05a";
+$slf-var-share: "\e05b";
+$slf-var-rocket: "\e05c";
+$slf-var-question: "\e05d";
+$slf-var-pie-chart: "\e05e";
+$slf-var-pencil: "\e05f";
+$slf-var-note: "\e060";
+$slf-var-loop: "\e064";
+$slf-var-home: "\e069";
+$slf-var-grid: "\e06a";
+$slf-var-graph: "\e06b";
+$slf-var-microphone: "\e063";
+$slf-var-music-tone-alt: "\e061";
+$slf-var-music-tone: "\e062";
+$slf-var-earphones-alt: "\e03c";
+$slf-var-earphones: "\e03d";
+$slf-var-equalizer: "\e06c";
+$slf-var-like: "\e068";
+$slf-var-dislike: "\e06d";
+$slf-var-control-start: "\e06f";
+$slf-var-control-rewind: "\e070";
+$slf-var-control-play: "\e071";
+$slf-var-control-pause: "\e072";
+$slf-var-control-forward: "\e073";
+$slf-var-control-end: "\e074";
+$slf-var-volume-1: "\e09f";
+$slf-var-volume-2: "\e0a0";
+$slf-var-volume-off: "\e0a1";
+$slf-var-calendar: "\e075";
+$slf-var-bulb: "\e076";
+$slf-var-chart: "\e077";
+$slf-var-ban: "\e07c";
+$slf-var-bubble: "\e07d";
+$slf-var-camrecorder: "\e07e";
+$slf-var-camera: "\e07f";
+$slf-var-cloud-download: "\e083";
+$slf-var-cloud-upload: "\e084";
+$slf-var-envelope: "\e086";
+$slf-var-eye: "\e087";
+$slf-var-flag: "\e088";
+$slf-var-heart: "\e08a";
+$slf-var-info: "\e08b";
+$slf-var-key: "\e08c";
+$slf-var-link: "\e08d";
+$slf-var-lock: "\e08e";
+$slf-var-lock-open: "\e08f";
+$slf-var-magnifier: "\e090";
+$slf-var-magnifier-add: "\e091";
+$slf-var-magnifier-remove: "\e092";
+$slf-var-paper-clip: "\e093";
+$slf-var-paper-plane: "\e094";
+$slf-var-power: "\e097";
+$slf-var-refresh: "\e098";
+$slf-var-reload: "\e099";
+$slf-var-settings: "\e09a";
+$slf-var-star: "\e09b";
+$slf-var-symbol-female: "\e09c";
+$slf-var-symbol-male: "\e09d";
+$slf-var-target: "\e09e";
+$slf-var-credit-card: "\e025";
+$slf-var-paypal: "\e608";
+$slf-var-social-tumblr: "\e00a";
+$slf-var-social-twitter: "\e009";
+$slf-var-social-facebook: "\e00b";
+$slf-var-social-instagram: "\e609";
+$slf-var-social-linkedin: "\e60a";
+$slf-var-social-pinterest: "\e60b";
+$slf-var-social-github: "\e60c";
+$slf-var-social-google: "\e60d";
+$slf-var-social-reddit: "\e60e";
+$slf-var-social-skype: "\e60f";
+$slf-var-social-dribbble: "\e00d";
+$slf-var-social-behance: "\e610";
+$slf-var-social-foursqare: "\e611";
+$slf-var-social-soundcloud: "\e612";
+$slf-var-social-spotify: "\e613";
+$slf-var-social-stumbleupon: "\e614";
+$slf-var-social-youtube: "\e008";
+$slf-var-social-dropbox: "\e00c";
+$slf-var-social-vkontakte: "\e618";
+$slf-var-social-steam: "\e620";
